update on 20250719-2002, comment: 3.2 實作 Spring Security 配置和過濾器